# GitHubSyncer

./: .dockerignore  .replit  BIND_MOUNT_SETUP.md  COMPLETE_WORKFLOW_DEMO.md  CONTAINER_HEALTH_FIX.md  CONTAINER_RESTART_AFTER_SYNC_FIXED.md  CONTAINER_RESTART_LABELS.md  DEMONSTRATION.md  DEPLOYMENT.md  DOCKER_SETUP_GUIDE.md  DOCKER_VOLUMES_GUIDE.md  Dockerfile  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_DOCKER_GUIDE.md  README.md  WEBHOOK_CONTAINER_RESTART_SUMMARY.md  cookies.txt  database.py  deploy-docker.sh  docker-compose.recommended.yml  docker-compose.yml  entrypoint.sh  example-odoo-setup.md  main.py  models.py  portainer-template.json  pyproject.toml  test_auto_path_detection.py  test_comma_separated_repos.py  test_container_cleanup.py  test_container_restart_complete.py  test_deployment.py  test_direct_sync.py  test_docker_connectivity.py  test_flask_docker_pattern.py  test_manual_sync_container_restart.py  test_odoo_restart_workflow.py  test_production_workflow.py  test_real_git_sync.py  test_repo_label_pattern.py  (+9 more)
attached_assets/: Pasted--run-File-usr-local-lib-python3-11-site-packages-uvicorn-main-py-line-580-in-run-se-1749499896415_1749499896415.txt  Pasted-2025-06-09-20-44-01-main-INFO-Starting-GitHub-Sync-Server-2025-06-09-20-44-01-database--1749501913504_1749501913505.txt  Pasted-2025-06-10-04-08-46-services-docker-service-INFO-Docker-not-accessible-using-demonstration-m-1749528550522_1749528550522.txt  Pasted-from-flask-import-Flask-request-import-subprocess-import-os-import-docker-from-dotenv-import-lo-1749535997597_1749535997598.txt
routes/: api.py  (+2 more)
(+19 files in other folders)
